wip: pass --enable-native-access to kuilt-core test JVMs